<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background=""
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="50dp"
            android:gravity="center"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="">


        <TextView
            android:id="@+id/estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estudiante"
            android:textSize="25dp"
            android:gravity="left"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/editestudiante"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp">

        </EditText>

        <TextView
            android:id="@+id/documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:textSize="25dp"
            android:gravity="left"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/editdocumento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp">

        </EditText>

        <TextView
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textSize="25dp"
            android:gravity="left"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/editedad"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp">

        </EditText>

        <TextView
            android:id="@+id/carrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrera"
            android:textSize="25dp"
            android:gravity="left"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/editcarrera"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp">

        </EditText>

        <TextView
            android:id="@+id/semestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semestre"
            android:textSize="25dp"
            android:gravity="left"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/editsemestre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:layout_margin="10dp"
            >

        </Button>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_margin="10dp">
        </Button>

    </LinearLayout>

</LinearLayout>
